--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/pizzaria-api
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=Anderson2@
 
 server.port=8080
 
